--- a/Python/Sudoku.ipynb
+++ b/Python/Sudoku.ipynb
@@ -66,7 +66,39 @@
    "outputs": [],
    "source": [
     "def sudoku_csp(Puzzle): \n",
-    "    \"your code here\""
+    "    S = range(1, 10)\n",
+    "    Variables = {  f'V{i}{j}'   for i in S\n",
+    "                                for j in S\n",
+    "                }\n",
+    "    Values = set(S)\n",
+    "    Constraints = set ()\n",
+    "    for x in range(0,9):\n",
+    "        for y in range(0,9):\n",
+    "            if Puzzle[x][y] == \"*\":\n",
+    "                tupel = (x//3,y//3)\n",
+    "                for j in range(0,9):\n",
+    "                    Constraints.add(f'V{x+1}{y+1} != V{x+1}{j+1}')\n",
+    "                    if Puzzle[x][j] != \"*\":\n",
+    "                        Constraints.add(f'V{x+1}{y+1} != {Puzzle[x][j]}')\n",
+    "                    else:\n",
+    "                        Constraints.add(f'V{x+1}{y+1} != \"*\"')\n",
+    "                    Constraints.add(f'V{x+1}{y+1} != V{j+1}{y+1}')\n",
+    "                    if Puzzle[j][y] != \"*\":    \n",
+    "                        Constraints.add(f'V{x+1}{y+1} != {Puzzle[j][y]}')\n",
+    "                    else:\n",
+    "                        Constraints.add(f'V{x+1}{y+1} != \"*\"')\n",
+    "                        \n",
+    "                    for i in range(0,9):\n",
+    "                        if tupel == (j//3,i//3):\n",
+    "                            Constraints.add(f'V{x+1}{y+1} != V{j}{y}')\n",
+    "                            if Puzzle[j][i] != \"*\":\n",
+    "                                Constraints.add(f'V{x+1}{y+1} != {Puzzle[j][i]}')\n",
+    "                            else:\n",
+    "                                Constraints.add(f'V{x+1}{y+1} != \"*\"')\n",
+    "            else:\n",
+    "                Constraints.add(f'V{x+1}{y+1} == {Puzzle[x][y]}')\n",
+    "    \n",
+    "    return Variables, Values, Constraints"
    ]
   },
   {
@@ -162,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
